# py-logify

./: .gitignore  CONTRIBUTING.md  README.md  manifest.yaml  pyproject.toml  pyrightconfig.json
logify/: __init__.py  appender.py  filter.py  layout.py  log_event.py  logger.py
logify/appenders/: file.py  standard_output.py  string_io.py
logify/layouts/: __init__.py  basic.py  colorized.py
src/logify/: appender.py  filter.py  layout.py  level.py  log_event.py  logger.py
src/logify/appenders/: __init__.py  file.py  standard_output.py  string_io.py
src/logify/layouts/: __init__.py  basic.py  colorized.py
test/: conftest.py  test_appender.py  test_appender_file.py  test_appender_multiple.py  test_appender_standard_output.py  test_appender_string_io.py  test_filter.py  test_logger.py  test_logger_appenders.py  test_logger_level.py
tests/: test_appender_file.py  test_appender_multiple.py  test_appender_standard_output.py  test_appender_string_io.py  test_logger.py  test_logger_appenders.py  test_logger_level.py
